--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -51,24 +51,23 @@
             <div class="col-10 mx-auto">
                 <!-- datahub-view-page-big-title -->
                 <h2 class="mb-3">데이터 허브 상세 조회</h2>
-                <h5></h5>
                 <h4 class="mb-3">관련 API 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#" class="">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
@@ -102,7 +101,7 @@
 
                 <h4 class="mt-5 mb-4">관련 데이터셋 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#" class="">
                             <div class="fw-bold">데이터셋 이름</div>
                             <div>데이터셋 내용</div>
