--- a/jsjs/datahub/new.html
+++ b/jsjs/datahub/new.html
@@ -25,12 +25,12 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-12">
-            <div class="mb-3">
-                <h2>데이터허브 생성</h2>
+        <div class="col-11 col-md-10 mx-auto">
+            <div>
+                <h2>데이터 허브 생성</h2>
             </div>
-            <div class="mb-3">
-                <h4>데이터허브 종류</h4>
+            <div class="mb-3 mt-5">
+                <h4>데이터 허브 종류</h4>
                 <select class="form-select" aria-label="Default select example">
                     <option selected>과학</option>
                     <option value="1">사회</option>
@@ -39,13 +39,14 @@
                 </select>
             </div>
             <div class="mb-3">
-                <h4>데이터허브 이름</h4>
+                <h4>데이터 허브 이름</h4>
                 <input type="text" class="form-control" name="name" value="">
             </div>
             <div class="mb-3">
-                <h4>데이터허브 설명</h4>
+                <h4>데이터 허브 설명</h4>
                 <textarea class="form-control col-12" rows="7" name="apiDesc"></textarea>
             </div>
+            <h4>데이터 허브 아이콘</h4>
             <div class="input-group mb-3">
                 <input type="file" class="form-control" id="inputGroupFile02" onchange="setThumbnail(event);">
             </div>
