fix: 데이터 허브 상세 조회 UI 추가 수정

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -51,102 +51,95 @@
             <div class="col-10 mx-auto">
                 <!-- datahub-view-page-big-title -->
                 <h2 class="mb-3">데이터 허브 상세 조회</h2>
+
+
+                <!-- datahub-view-page-card-API-contents -->
                 <h4 class="mb-3">관련 API 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
                 </div>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
                 </div>
 
-                <h4 class="mt-5 mb-4">관련 데이터셋 목록</h4>
+
+
+                <!-- datahub-view-page-card-dataset-contents -->
+                <h4 class="mb-3 mt-5">관련 데이터셋 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">데이터셋 이름</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">데이터셋 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
+                    <div class="card border border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header">API 제목</div>
+                        <div class="card-body text-dark">
+                            <p class="card-text">API 내용</p>
+                            <span class="badge bg-dark">과학기술</span>
+                            <span class="badge bg-dark">ㄱㄱㄱ</span>
+                        </div>
                     </div>
                 </div>
-                <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
-                    </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
-                    </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
-                        <a href="#" class="">
-                            <div class="fw-bold">데이터셋 이름</div>
-                            <div>데이터셋 내용</div>
-                            <div>카테고리</div>
-                        </a>
-                    </div>
-                </div>
-            </div>
+
+                
             <!--글씨 쓰기 필요없음 
                 api나 데이터셋 목록
                 그리드, 배너로
