--- a/jsjs/datahub/main.html
+++ b/jsjs/datahub/main.html
@@ -81,10 +81,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col-12 col-lg-4">
-
-
                     <div class="card border-black mb-3 mt-3">
                         <div class="card-body text-dark">
                             <h5 class="card-title text-center">데이터허브 사용리스트</h5>
@@ -182,7 +180,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card border-black mb-3" >
+                    <div class="card border-black mb-3" style="height: 145px;">
                         <div class="card-body text-dark">
                             <div class="tab-content" id="pills-tabContent">
                                 <div class="tab-pane fade show active" id="tab01" role="tabpanel">
@@ -205,14 +203,11 @@
                                 <div class="tab-pane fade" id="tab09" role="tabpanel">...9
                                 </div>
                             </div>
-
                         </div>
                     </div>
 
                 </div>
                 <div class="col-12 col-lg-4">
-
-
                     <div id="carouselExampleCaptions" class="carousel slide mt-3" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -256,6 +251,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </div>
 </body>
