--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -45,6 +45,29 @@
             text-decoration: none;
             color: inherit;
         }
+
+        .ellipsis {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            word-wrap: break-word;
+            line-height: 1.2em;
+            height: 2.4em;
+        }
+
+        .ellipsis2 {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            word-wrap: break-word;
+            line-height: 1.6em;
+            height: 2.6em;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -57,54 +80,54 @@
                 <h2 class="mb-3">데이터 허브 상세 조회</h2>
 
                 <!-- datahub-view-page-card-API-contents -->
-                <h4 class="mb-2">관련 API 목록</h4>
+                <h4 class="mb-2">사용된 API</h4>
                 <div class="row mx-auto d-flex justify-content-between">
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목sdfsdfsdffs 
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header">API 제목
+                        <div class="card-header fw-bold">API 제목
                             <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
                         </div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
                 </div>
@@ -112,35 +135,36 @@
 
             <!-- datahub-view-page-card-API-specialcard -->
             <div class="col-12 mx-auto p-4">
+                <h4 class="mb-2 mt-3">여기에서만 사용된 API</h4>
                 <div class="row mx-auto d-flex justify-content-between">
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header">API 제목</div>
+                        <div class="card-header fw-bold">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header">API 제목</div>
+                        <div class="card-header fw-bold">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header">API 제목</div>
+                        <div class="card-header fw-bold">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header">API 제목</div>
+                        <div class="card-header fw-bold">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header">API 제목</div>
+                        <div class="card-header fw-bold">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text">API 내용</p>
+                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                 </div>
@@ -148,30 +172,30 @@
 
             <div class="col-12 col-lg-10 mx-auto">
                 <!-- datahub-view-page-card-dataset-contents -->
-                <h4 class="mb-2 mt-3">관련 데이터셋 목록</h4>
+                <h4 class="mb-2 mt-3">사용된 데이터셋</h4>
                 <div class="row mx-auto d-flex justify-content-between">
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title">데이터셋 이름</h5>
-                            <p class="card-text">데이터셋 내용</p>
+                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
+                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title">데이터셋 이름</h5>
-                            <p class="card-text">데이터셋 내용</p>
+                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
+                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title">데이터셋 이름</h5>
-                            <p class="card-text">데이터셋 내용</p>
+                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
+                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title">데이터셋 이름</h5>
-                            <p class="card-text">데이터셋 내용</p>
+                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
+                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                 </div>
